# pod-ai-cli

./: .gitignore  README.md  pyproject.toml
src/pod_ai/: __main__.py  cli.py  jvm.py  models.py  reader.py  utils.py  writer.py
src/pod_ai/commands/: assignments.py  convert.py  info.py  resources.py  tasks.py
tests/: conftest.py  test_commands.py
tests/fixtures/: sample.xml
