[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pod-ai"
version = "0.1.0"
description = "CLI for reading and modifying ProjectLibre POD files via MPXJ"
requires-python = ">=3.10"
authors = [{name = "Astrid", email = "the.astrid.solveig@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "typer[all]>=0.12",
    "mpxj>=1.3",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
pod-ai = "pod_ai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pod_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
